c_lib/linalg/include/linalg.h

// Typedefs
typedef unsigned short  float16_t;
typedef float           float32_t;
// Structs and unions
typedef struct {
    float16_t** m;
    size_t x;
    size_t y;
} float16_matrix_t;
typedef struct {
    float32_t** m;
    size_t x;
    size_t y;
} float32_matrix_t;
typedef struct {
    float64_t** m;
    size_t x;
    size_t y;
} float64_matrix_t;
typedef struct {
    int32_t** m;
    size_t x;
    size_t y;
} int32_matrix_t;
typedef struct {
    int64_t** m;
    size_t x;
    size_t y;
} int64_matrix_t;
typedef struct {
    uint64_t** m;
    size_t x;
    size_t y;
}

typedef struct {
    float16_matrix_t res;
    error_t err;
} float16_matrix_res_t;
typedef struct {
    float32_matrix_t res;
    error_t err;
} float32_matrix_res_t;
typedef struct {
    float64_matrix_t res;
    error_t err;
} float64_matrix_res_t;
typedef struct {
    int32_matrix_t res;
    error_t err;
} int32_matrix_res_t;
typedef struct {
    int64_matrix_t res;
    error_t err;
} int64_matrix_res_t;
// Function prototypes
void                    free_f16m(float16_matrix_t m);
void                    free_f32m(float32_matrix_t m);
float16_matrix_res_t    copy_f16m(float16_matrix_t m);
float16_matrix_res_t    f16m_add(float16_matrix_t m1, float16_matrix_t m2);
float16_matrix_res_t    f16m_sub(float16_matrix_t m1, float16_matrix_t m2);
float16_matrix_res_t    f16m_mul(float16_matrix_t m1, float16_matrix_t m2);
float16_matrix_res_t    f16m_div(float16_matrix_t m1, float16_matrix_t m2);
float16_matrix_res_t    f16m_matmul(float16_matrix_t m1, float16_matrix_t m2);
float16_matrix_res_t    f16m_neg(float16_matrix_t m);
float16_matrix_res_t    f16m_exp(float16_matrix_t m);
float16_matrix_res_t    f16m_transpose(float16_matrix_t m);
float32_matrix_res_t    f32m_transpose(float32_matrix_t m);
float64_matrix_res_t    f64m_transpose(float64_matrix_t m);
int32_matrix_res_t      i32m_transpose(int32_matrix_t m);
int64_matrix_res_t      i64m_transpose(int64_matrix_t m);