extra_modules/c_apis/linalg.py


linalg_c.f16m_transpose.argtypes = [Cfloat16_matrix_t]
linalg_c.f16m_transpose.restype = Cfloat16_matrix_res_t

linalg_c.f32m_transpose.argtypes = [Cfloat32_matrix_t]
linalg_c.f32m_transpose.restype = Cfloat32_matrix_res_t

linalg_c.f64m_transpose.argtypes = [Cfloat64_matrix_t]
linalg_c.f64m_transpose.restype = Cfloat64_matrix_res_t

linalg_c.i32m_transpose.argtypes = [Cint32_matrix_t]
linalg_c.i32m_transpose.restype = Cint32_matrix_res_t

linalg_c.i64m_transpose.argtypes = [Cint64_matrix_t]
linalg_c.i64m_transpose.restype = Cint64_matrix_res_t

# Datatypes
class f16_matrix:
    def __init__(self, m):
        #Type of m: list[list[Float16]]|list[list[f16]]|Cfloat16_matrix_t|f16_matrix

        #*Check if m is a f16_matrix or Cfloat16_matrix_t instance
        if isinstance(m, f16_matrix):
            self.x = m.x
            self.y = m.y
            self.m = m.m
        elif isinstance(m, Cfloat16_matrix_t):
            self.x = int(getattr(m, 'x'))
            self.y = int(getattr(m, 'y'))
            self.m = m
        else:
            #*Check nesting depth of m
            if type(m) is not list or len(m) == 0 or not all(map(lambda v: type(v) is list, m)):
                raise ValueError("Matrix must have a nesting depth of exactly 2")
            
            #*Check if m is empty
            if len(m) == 1 and len(m[0]) == 0:
                raise ValueError("Matrix must not be empty")
            
            #*Check size of each subvector in m
            if not all(map(lambda v: len(v) == len(m[0]), m)):
                raise ValueError("Matrix must be rectangular")

            #*Check if all elements in m have equal type
            first_type = type(m[0][0])
            if not all(map(lambda x: type(x) is first_type, chain.from_iterable(m))):
                raise ValueError("All matrix elements must be of the same type")

            #*Check first type of the input data
            if first_type is f16:
                self.y = len(m)
                self.x = len(m[0])

                m = ctypes.cast((f16_subvector_container * self.y)(*list(map(lambda v: ctypes.cast((float16_t * self.x)(*list(map(lambda x: x.val, v))), ctypes.POINTER(float16_t)), m))), ctypes.POINTER(f16_subvector_container))
                
                self.m = Cfloat16_matrix_t(m, ctypes.c_size_t(self.x), ctypes.c_size_t(self.y))
            elif first_type is dta.Float16:
                self.y = len(m)
                self.x = len(m[0])

                m = ctypes.cast((f16_subvector_container * self.y)(*list(map(lambda v: ctypes.cast((float16_t * self.x)(*list(map(lambda x: x.value.val, v))), ctypes.POINTER(float16_t)), m))), ctypes.POINTER(f16_subvector_container))

                self.m = Cfloat16_matrix_t(m, ctypes.c_size_t(self.x), ctypes.c_size_t(self.y))
            else:
                raise ValueError("Matrix elements must be of type Float16 or f16")
    
    def free(self):
        linalg_c.free_f16m(self.m)
        del self.x
        del self.y

    @staticmethod
    def f16_sci_stringify(f16: float16_t):
        c_stringified_value = ctypes.create_string_buffer(SCIENTIFIC_STR_BUF_SIZE)
        numbers_c.conv_f16_to_sci_str(f16, c_stringified_value)
        return c_stringified_value.value.decode('utf-8')+'h'

    def __repr__(self): #All items are left-padded like this: [0.4213312, 0.3212   , 0.3112333]
        matrix = list(map(lambda ptr: ptr[:self.x], getattr(self.m, 'm')[:self.y]))
        max_str_len = max(map(lambda v: len(self.f16_sci_stringify(v)), chain.from_iterable(matrix)))

        stringified_vectors_with_padded_subvectors = list(map(lambda v: ' {'+', '.join(map(lambda x: self.f16_sci_stringify(x).ljust(max_str_len, ' '), v))+'},', matrix))
        
        stringified_vectors_with_padded_subvectors[0]  = '{' + stringified_vectors_with_padded_subvectors[0][1:]
        stringified_vectors_with_padded_subvectors[-1] = stringified_vectors_with_padded_subvectors[-1][:-2] + '}}'

        return '\n'.join(stringified_vectors_with_padded_subvectors)
    
    def __str__(self):
        return self.__repr__()
            
    def __add__(self, other):
        if isinstance(other, f16_matrix):
            c_res: Cfloat16_matrix_res_t = linalg_c.f16m_add(self.m, other.m)
            err: int = getattr(c_res, 'err')
            if err != 0:
                match err:
                    case 1: raise MemoryError("Failed to allocate resulting matrix")
                    case 2: raise ValueError(f"Matrix sizes must be equal ({self.x}x{self.y} != {other.x}x{other.y})")
                    case _: raise Exception("Unknown error")
            return f16_matrix(getattr(c_res, 'res'))
        else:
            raise ValueError("Matrix types must be same")
        
    def __sub__(self, other):
        if isinstance(other, f16_matrix):
            c_res: Cfloat16_matrix_res_t = linalg_c.f16m_sub(self.m, other.m)
            err: int = getattr(c_res, 'err')
            if err != 0:
                match err:
                    case 1: raise MemoryError("Failed to allocate resulting matrix")
                    case 2: raise ValueError(f"Matrix sizes must be equal ({self.x}x{self.y} != {other.x}x{other.y})")
                    case _: raise Exception("Unknown error")
            return f16_matrix(getattr(c_res, 'res'))
        else:
            raise ValueError("Matrix types must be same")
        
    def __mul__(self, other):
        if isinstance(other, f16_matrix):
            c_res: Cfloat16_matrix_res_t = linalg_c.f16m_mul(self.m, other.m)
            err: int = getattr(c_res, 'err')
            if err != 0:
                match err:
                    case 1: raise MemoryError("Failed to allocate resulting matrix")
                    case 2: raise ValueError(f"Matrix sizes must be equal ({self.x}x{self.y} != {other.x}x{other.y})")
                    case _: raise Exception("Unknown error")
            return f16_matrix(getattr(c_res, 'res'))
        else:
            raise ValueError("Matrix types must be same")
        
    def __truediv__(self, other):
        if isinstance(other, f16_matrix):
            c_res: Cfloat16_matrix_res_t = linalg_c.f16m_div(self.m, other.m)
            err: int = getattr(c_res, 'err')
            if err != 0:
                match err:
                    case 1: raise MemoryError("Failed to allocate resulting matrix")
                    case 2: raise ValueError(f"Matrix sizes must be equal ({self.x}x{self.y} != {other.x}x{other.y})")
                    case 3: raise ZeroDivisionError("Zero found in second operand matrix")
                    case _: raise Exception("Unknown error")
            return f16_matrix(getattr(c_res, 'res'))
        else:
            raise ValueError("Matrix types must be same")
        
    def __matmul__(self, other):
        if isinstance(other, f16_matrix):
            c_res: Cfloat16_matrix_res_t = linalg_c.f16m_matmul(self.m, other.m)
            err: int = getattr(c_res, 'err')
            if err != 0:
                match err:
                    case 1: raise MemoryError("Failed to allocate resulting matrix")
                    case 2: raise ValueError(f"A {self.x}x{self.y} matrix is not compatible with a {other.x}x{other.y} matrix for matrix multiplication")
                    case _: raise Exception("Unknown error")
            return f16_matrix(getattr(c_res, 'res'))
        else:
            raise ValueError("Matrix types must be same")
        
    def __neg__(self):
        c_res: Cfloat16_matrix_res_t = linalg_c.f16m_neg(self.m)
        err: int = getattr(c_res, 'err')
        if err != 0:
            match err:
                case 1: raise MemoryError("Failed to allocate resulting matrix")
                case _: raise Exception("Unknown error")
        return f16_matrix(getattr(c_res, 'res'))
    
    def exp(self):
        c_res: Cfloat16_matrix_res_t = linalg_c.f16m_exp(self.m)
        err: int = getattr(c_res, 'err')
        if err != 0:
            match err:
                case 1: raise MemoryError("Failed to allocate resulting matrix")
                case _: raise Exception("Unknown error")
        return f16_matrix(getattr(c_res, 'res'))
    
    def transpose(self):
        c_res: Cfloat16_matrix_res_t = linalg_c.f16m_transpose(self.m)
        err: int = getattr(c_res, 'err')
        if err != 0:
            match err:
                case 1: raise MemoryError("Failed to allocate resulting matrix")
                case _: raise Exception("Unknown error")
        return f16_matrix(getattr(c_res, 'res'))

    def copy(self):
        c_res: Cfloat16_matrix_res_t = linalg_c.copy_f16m(self.m)
        err: int = getattr(c_res, 'err')
        if err != 0:
            match err:
                case 1: raise MemoryError("Failed to allocate matrix copy")
                case _: raise Exception("Unknown error")
        return f16_matrix(getattr(c_res, 'res'))
    
class f32_matrix:
    def __init__(self, m):
        #Type of m: list[list[Float32]]|list[list[f32]]|Cfloat32_matrix_t|f32_matrix

        #*Check if m is a f32_matrix or Cfloat32_matrix_t instance
        if isinstance(m, f32_matrix):
            self.x = m.x
            self.y = m.y
            self.m = m.m
        elif isinstance(m, Cfloat32_matrix_t):
            self.x = int(getattr(m, 'x'))
            self.y = int(getattr(m, 'y'))
            self.m = m
        else:
            #*Check nesting depth of m
            if type(m) is not list or len(m) == 0 or not all(map(lambda v: type(v) is list, m)):
                raise ValueError("Matrix must have a nesting depth of exactly 2")
            
            #*Check if m is empty
            if len(m) == 1 and len(m[0]) == 0:
                raise ValueError("Matrix must not be empty")
            
            #*Check size of each subvector in m
            if not all(map(lambda v: len(v) == len(m[0]), m)):
                raise ValueError("Matrix must be rectangular")

            #*Check if all elements in m have equal type
            first_type = type(m[0][0])
            if not all(map(lambda x: type(x) is first_type, chain.from_iterable(m))):
                raise ValueError("All matrix elements must be of the same type")

            #*Check first type of the input data
            if first_type is f32:
                self.y = len(m)
                self.x = len(m[0])

                m = ctypes.cast((f32_subvector_container * self.y)(*list(map(lambda v: ctypes.cast((float32_t * self.x)(*list(map(lambda x: x.val, v))), ctypes.POINTER(float32_t)), m))), ctypes.POINTER(f32_subvector_container))
                
                self.m = Cfloat32_matrix_t(m, ctypes.c_size_t(self.x), ctypes.c_size_t(self.y))
            elif first_type is dta.Float32:
                self.y = len(m)
                self.x = len(m[0])

                m = ctypes.cast((f32_subvector_container * self.y)(*list(map(lambda v: ctypes.cast((float32_t * self.x)(*list(map(lambda x: x.value.val, v))), ctypes.POINTER(float32_t)), m))), ctypes.POINTER(f32_subvector_container))

                self.m = Cfloat32_matrix_t(m, ctypes.c_size_t(self.x), ctypes.c_size_t(self.y))
            else:
                raise ValueError("Matrix elements must be of type Float32 or f32")
    
    def free(self):
        linalg_c.free_f32m(self.m)
        del self.x
        del self.y

    @staticmethod
    def f32_sci_stringify(f32: float32_t):
        c_stringified_value = ctypes.create_string_buffer(SCIENTIFIC_STR_BUF_SIZE)
        numbers_c.conv_f32_to_sci_str(f32, c_stringified_value)
        return c_stringified_value.value.decode('utf-8')+'f'

    def __repr__(self): #All items are left-padded like this: [0.4213312, 0.3212   , 0.3112333]
        matrix = list(map(lambda ptr: ptr[:self.x], getattr(self.m, 'm')[:self.y]))
        max_str_len = max(map(lambda v: len(self.f32_sci_stringify(v)), chain.from_iterable(matrix)))
